--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
-	"pg":"*"
+    "express": "^4.17.1",
+	"pg": "^8.5.1",
   }
 }
